Added back and fore ground color setting, image backgrouond, auto switch form label to multiline text box when text is too long, and tooltip on button when text is too long.

--- a/InputDialogUsageSample/InputDialogUsageSample.csproj
+++ b/InputDialogUsageSample/InputDialogUsageSample.csproj
@@ -20,4 +20,14 @@
     <ProjectReference Include="..\InputDialog\InputDialog.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Images\Picture.JPG">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
