--- a/InputDialogTester/InputDialogTester.csproj
+++ b/InputDialogTester/InputDialogTester.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Management" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\InputDialog\InputDialog.csproj" />
   </ItemGroup>
 
