--- a/InputDialog/InputDialog.csproj
+++ b/InputDialog/InputDialog.csproj
@@ -6,12 +6,13 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Version>1.2.3</Version>
+		<Version>1.2.4</Version>
 		<Description>A simple dialog box to capture user input. Supports a single string input or selection of a value from a dropdown box.
 Also functions a a standard MessageBox.
 
 20220202 - Enabled a scrolling textbox if message is too long.
-20220213 - Updated XML comments</Description>
+20220213 - Updated XML comments
+20220308 - Enable no icon and adjusted sizes of other elements accordingly</Description>
 		<Copyright>House on the Rock Software</Copyright>
 		<PackageProjectUrl>https://github.com/rkreisel/InputDialog</PackageProjectUrl>
 		<PackageReadmeFile>ReadMe.md</PackageReadmeFile>
