Fixed sizing of input box Added readme file

--- a/InputDialog/InputDialog.csproj
+++ b/InputDialog/InputDialog.csproj
@@ -29,7 +29,7 @@ Also functions a a standard MessageBox.
 
 	<ItemGroup>
 	  <None Update="ReadMe.md">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
 	  </None>
