--- a/InputDialog/InputDialog.csproj
+++ b/InputDialog/InputDialog.csproj
@@ -30,4 +30,11 @@ Also functions a a standard MessageBox.
 	  <NoWarn>1701;1702;CS8622;CS8618</NoWarn>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <None Include="..\ReadMe.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
+
 </Project>
