--- a/InputDialog/InputDialog.csproj
+++ b/InputDialog/InputDialog.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Version>1.3.0</Version>
+		<Version>1.3.1</Version>
 		<Description>A simple dialog box to capture user input. Supports a single string input or selection of a value from a dropdown box.
 Also functions a a standard MessageBox.
 
@@ -15,7 +15,8 @@ Also functions a a standard MessageBox.
 20220308 - Enable no icon and adjusted sizes of other elements accordingly
 20231214 - Fixed combobox Enter key = click Ok button (if exists)
 20231215 - Code Cleanup only (no true updates)
-20240103 - Added numeric selector. moved Enums to separate classes (eliminate InputDialog.InputDialog.enum)</Description>
+20240103 - Added numeric selector. moved Enums to separate classes (eliminate InputDialog.InputDialog.enum)
+20240128 - Added ability to control appearance of scroll arrows when using Textbox style</Description>
 		<Copyright>House on the Rock Software</Copyright>
 		<PackageProjectUrl>https://github.com/rkreisel/InputDialog</PackageProjectUrl>
 		<PackageReadmeFile>ReadMe.md</PackageReadmeFile>
