--- a/InputDialog/InputDialog.csproj
+++ b/InputDialog/InputDialog.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0-windows</TargetFramework>
+		<TargetFramework>net9.0-windows</TargetFramework>
 		<UseWindowsForms>true</UseWindowsForms>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Version>1.3.1</Version>
+		<Version>1.4.0</Version>
 		<Description>A simple dialog box to capture user input. Supports a single string input or selection of a value from a dropdown box.
 Also functions a a standard MessageBox.
 
@@ -16,7 +16,8 @@ Also functions a a standard MessageBox.
 20231214 - Fixed combobox Enter key = click Ok button (if exists)
 20231215 - Code Cleanup only (no true updates)
 20240103 - Added numeric selector. moved Enums to separate classes (eliminate InputDialog.InputDialog.enum)
-20240128 - Added ability to control appearance of scroll arrows when using Textbox style</Description>
+20240128 - Added ability to control appearance of scroll arrows when using Textbox style
+20250821 - Update to .Net 9 and C# 13</Description>
 		<Copyright>House on the Rock Software</Copyright>
 		<PackageProjectUrl>https://github.com/rkreisel/InputDialog</PackageProjectUrl>
 		<PackageReadmeFile>ReadMe.md</PackageReadmeFile>
